feat: update .gitignore

--- a/.github/workflows/sentry-demo.yml
+++ b/.github/workflows/sentry-demo.yml
@@ -6,9 +6,9 @@ on:
     branches:
       - master
     paths: # 触发作用域
-      - '.github/workflows/**'
-      - '__test__/**'
-      - 'src/**'
+      - ".github/workflows/**"
+      - "__test__/**"
+      - "src/**"
 
 jobs:
   test: # job名称
@@ -21,12 +21,10 @@ jobs:
       - name: Create Sentry release
         uses: getsentry/action-release@v1
         env:
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}  
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
           SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
           # SENTRY_URL: https://sentry.io/
         with:
           environment: production
-          sourcemaps: '../../build'
-
-
+          sourcemaps: "./build"
