feat: update sentry-demo.yml

--- a/.github/workflows/sentry-demo.yml
+++ b/.github/workflows/sentry-demo.yml
@@ -27,4 +27,4 @@ jobs:
           # SENTRY_URL: https://sentry.io/
         with:
           environment: production
-          sourcemaps: "./build"
+          sourcemaps: ./build
