--- a/.github/workflows/sentry-demo.yml
+++ b/.github/workflows/sentry-demo.yml
@@ -17,7 +17,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
+      - name: build package
+        run: | # 自定义命令
+          npm i 
+          npm build
       - name: Create Sentry release
         uses: getsentry/action-release@v1
         env:
