--- a/.github/workflows/sentry-demo.yml
+++ b/.github/workflows/sentry-demo.yml
@@ -31,5 +31,6 @@ jobs:
         with:
           environment: production
           sourcemaps: ./build
-          version: sentry-demo@1.0.5
           projects: ${{ secrets.SENTRY_PROJECT }}
+          urlPrefix: "~"
+
