--- a/.github/workflows/sentry-demo.yml
+++ b/.github/workflows/sentry-demo.yml
@@ -17,10 +17,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: build package
-        run: | # 自定义命令
-          npm ci 
-          npm run build
+      # - name: build package
+      #   run: | # 自定义命令
+      #     npm ci 
+      #     npm run build
       - name: Create Sentry release
         uses: getsentry/action-release@v1
         env:
@@ -32,5 +32,4 @@ jobs:
           environment: production
           sourcemaps: ./build
           projects: ${{ secrets.SENTRY_PROJECT }}
-          urlPrefix: "~"
 
